<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddWatermarkActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp">

        <ImageView
            android:id="@+id/watermarkImageView"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:srcCompat="@android:color/darker_gray"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="45dp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="120dp">

                <TextView
                    android:id="@+id/inputWatermarkText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/input_wm_text" />

                <EditText
                    android:id="@+id/watermarkText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/default_watermark_text"
                    tools:text="@string/default_watermark_text" />

            </TableRow>

            <TableRow
                android:layout_width="115dp"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/colorPickText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/pick_color"
                    android:textAlignment="center" />

                <com.divyanshu.colorseekbar.ColorSeekBar
                    android:id="@+id/colorSeekBar"
                    android:layout_width="266dp"
                    android:layout_height="55dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:colorSeeds="@array/colors"
                    app:barHeight="12dp"
                    app:cornerRadius="6dp"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/rotationSelectText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/rotation"
                    android:textAlignment="center" />

                <com.warkiz.widget.IndicatorSeekBar
                    android:id="@+id/rotationSeekBar"
                    android:layout_width="339dp"
                    android:layout_height="48dp"

                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    app:isb_max="90.0"
                    app:isb_min="-90.0"
                    app:isb_progress="-30" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/alphaSelectText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/alpha"
                    android:textAlignment="center" />

                <com.warkiz.widget.IndicatorSeekBar
                    android:id="@+id/alphaSeekBar"
                    android:layout_width="339dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    app:isb_max="255"
                    app:isb_min="0"
                    app:isb_progress="175" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/sizeSelectText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/size"
                    android:textAlignment="center" />

                <com.warkiz.widget.IndicatorSeekBar
                    android:id="@+id/sizeSeekBar"
                    android:layout_width="339dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    app:isb_max="28"
                    app:isb_min="6"
                    app:isb_progress="20"
                    app:isb_seek_smoothly="false"
                    app:isb_ticks_count="23" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </TableRow>
        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Switch
                android:id="@+id/tileModeSwitch"
                android:layout_width="77dp"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/tile_mode"
                tools:checked="true" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Switch
                android:id="@+id/grayModeSwitch"
                android:layout_width="93dp"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/gray_mode"
                tools:checked="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            style="?android:attr/buttonBarStyle">

            <Button
                android:id="@+id/resetBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/reset"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/doneBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/done"
                style="?android:attr/buttonBarButtonStyle"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>